refactor: ML preprocessors for new Analyzer superclass structure